# coralation-analisis

./: .gitignore  CLAUDE.md  README.md  RUN_6GPU.md  RUN_ON_H200.md  SALIENT_IMAGENET_EXPERIMENT.md  download_models.py  main.py  pyproject.toml
data/salient_imagenet/: ground_truth.json
docs/: ARCHITECTURE_DIAGRAM.md  PIPELINE_SCHEMA.md  PRESENTATION_SLIDES.md  TECHNICAL_PIPELINE.md  framework_diagram.py
scripts/: build_salient_imagenet_artifacts.py  build_si_catalog.py  collect_si_results.sh  compare_salient_imagenet.py  merge_imagenet100_shards.py  run_6gpu.sh  run_paper_sweep.sh  run_paper_sweep_resume.sh  run_si_h200.sh
setup/: bootstrap_h200.sh  dl1_torchvision.py  dl2_clip.py  dl3_resume.py  dl3_siglip2.py  dl4_misc.py  dl5_qwen_vlm.py  dl6_qwen_editor.py  dl_nicopp.py  dl_nicopp_full.sh  dl_nicopp_full2.sh  dl_nicopp_zip.py  download_colored_mnist_h5.py  download_datasets.py  download_models.py  env.sh  env_workspace.sh  ladder_waterbirds_pkl.path  smoke_test.py  smoke_test_full.py
src/: ARCHITECTURE.md  __init__.py  __version__.py  classifier.py  clip_classifier.py  config.py  dataset.py  dataset_export.py  editor.py  editor_sam.py  feature_extractor.py  hf_classifier.py  imagenet100_classes.json  ladder_classifier.py  model_manager.py  pipeline.py  pipeline_v2.py  probe_evaluator.py  probe_generator.py  probe_reporter.py  reporter.py  reporter_v2.py  salient_imagenet_classes.json  vlm.py
src/analysis/: __init__.py  feature_discovery.py  hard_negatives.py  statistics.py
src/models/: attention_maps.py
tests/: conftest.py
tests/gpu/: conftest.py  (+9 more)
(+43 files in other folders)
